--- a/groth1.tex
+++ b/groth1.tex
@@ -4143,7 +4143,7 @@ poset of a benign 12-table?
 \end{todo}
 
 \subsection{Benign 12-tables and separators}
-
+\label{subsection:benign}
 We say that a 12-table $T$ is \textit{benign} if there exists no conflict
 $\left(  i,j\right)  $ of $T$ such that the $i$-th column of $T$ and the
 $j$-th column of $T$ both are mixed. (Remember that columns are sequences.)
@@ -9845,11 +9845,11 @@ influence.)
 
 
 \section{The structure of 12-rpps}
-\def\cut{{\operatorname*{cut}}} % what would be a good notation here? same question for the below:
+\def\seplist{{\operatorname*{seplist}}} % what would be a good notation here? same question for the below:
 \def\ceq{{\operatorname*{ceq}}}
 \def\ircont{{\operatorname*{ircont}}}
 \def\ceqvar{{{\alpha}}} %??
-\def\cutvar{{{\nu}}} % ???
+\def\seplistvar{{{\nu}}} % ???
 \def\supp{{\operatorname*{supp}}}
 \def\NS{{\operatorname*{NS}}}
 \def\g{{\widetilde{g}}}
@@ -9860,7 +9860,7 @@ influence.)
 \def\Z{\mathbb{Z}}
 
 \def\OneTwoRPP{{\operatorname*{RPP}^{12}\left(  \lambda/\mu\right)}}
-\def\OneTwoRPPCutvar{{\operatorname*{RPP}^{12}\left(  \lambda/\mu ;\cutvar \right)}}
+\def\OneTwoRPPCutvar{{\operatorname*{RPP}^{12}\left(  \lambda/\mu ;\seplistvar \right)}}
 \def\flip{{\operatorname*{flip}}}
 
 In this section, we let $\kk$ be the polynomial ring
@@ -9882,18 +9882,19 @@ where $M,r$ and $n_0,n_1,\dots,n_{r}$ are nonnegative integers naturally associa
 $$P_n(x_1,x_2)=(x_1^{n+1}-x_2^{n+1})/(x_1-x_2)=x_1^{n}+x_1^{n-1}x_2+\dots+x_1x_2^{n-1}+x_2^n.$$
 We fix the skew partition $\lm$ throughout the whole section.
 Abusing notation, we shall abbreviate $Y\left(\lm\right)$ as $\lm$.
-Let $W(\lm)$ be the number of nonempty columns in $\lm$.
+Let $\lambda_1$ be the number of nonempty columns in $\lm$.
 We will have a running example with $\lambda=(7,7,7,4,4)$ and $\mu=(5,3,2)$.
 
 
 
 \subsection{Irreducible components}
-We recall that a \textit{12-rpp} means an rpp whose entries all belong to the set $\left\{1, 2\right\}$.
+We recall that a \textit{12-rpp} means an rpp whose entries all belong to the set $\left\{1, 2\right\}$. 
 
 Given a 12-rpp $T$, consider the set $\NS(T)$ of all cells $(i,j)\in \lm$ such that $T(i,j)=1$ but $(i+1,j) \in \lm$ and $T(i+1,j)=2$. (In other words, $\NS(T)$ is the set of all non-stagnant cells in $T$ which are filled with a $1$ and which are not the lowest cells in their columns.)
-Clearly, $\NS(T)$ contains at most one cell from each column; thus, let us write $\NS(T)=\{(i_1,j_1),(i_2,j_2),\dots,(i_s,j_s)\}$ with $j_1<j_2<\dots<j_s$. Because $T$ is a 12-rpp, it follows that the numbers $i_1,i_2,\dots,i_s$ decrease weakly, therefore they form a partition which we call \textit{the cut-partition of} $T$ and denote 
-$$\cut(T):=(i_1,i_2,\dots,i_s).$$ 
-An example of calculation of $\cut(T)$ and $\NS(T)$ is illustrated on Figure \ref{fig:cut}.
+Clearly, $\NS(T)$ contains at most one cell from each column; thus, let us write $\NS(T)=\{(i_1,j_1),(i_2,j_2),\dots,(i_s,j_s)\}$ with $j_1<j_2<\dots<j_s$. Because $T$ is a 12-rpp, it follows that the numbers $i_1,i_2,\dots,i_s$ decrease weakly, therefore they form a partition which we called \textit{the seplist-partition of} $T$ and denoted 
+$$\seplist(T):=(i_1,i_2,\dots,i_s)$$ 
+in Section \ref{subsection:benign}.
+An example of calculation of $\seplist(T)$ and $\NS(T)$ is illustrated on Figure \ref{fig:seplist}. 
 
 \def\one{{\mathbf{1}}}
 \def\two{{\mathbf{2}}}
@@ -9917,82 +9918,96 @@ An example of calculation of $\cut(T)$ and $\NS(T)$ is illustrated on Figure \re
 \end{ytableau}\\
  & \\
 $\NS(T_1)=\{(4,1),(3,3),(3,4),(2,6)\}$ & $\NS(T_2)=\{(4,2),(3,3),(3,4),(2,7)\}$ \\
-$\cut(T_1)=(4,3,3,2)$ & $\cut(T_2)=(4,3,3,2)$ 
+$\seplist(T_1)=(4,3,3,2)$ & $\seplist(T_2)=(4,3,3,2)$ 
 \end{tabular}\\
-\caption{\label{fig:cut} Two 12-rpps of the same shape and with the same cut-partition.}
+\caption{\label{fig:seplist} Two 12-rpps of the same shape and with the same seplist-partition.}
 \end{figure}
 
 
 
-We would like to answer the following question: for which partitions $\cutvar=(i_1\geq \dots\geq i_s>0)$ does there exist a 12-rpp $T$ of shape $\lm$ such that $\cut(T)=\cutvar$?
+We would like to answer the following question: for which partitions $\seplistvar=(i_1\geq \dots\geq i_s>0)$ does there exist a 12-rpp $T$ of shape $\lm$ such that $\seplist(T)=\seplistvar$?
 
 A trivial necessary condition for this to happen is that there should exist some numbers $j_1<j_2<\dots<j_s$ such that 
 \begin{equation}\label{cond:necessary}
 (i_1,j_1),(i_1+1,j_1),(i_2,j_2),(i_2+1,j_2),\dots,(i_s,j_s),(i_s+1,j_s)\in \lm. 
 \end{equation}
 
-\newcommand{\nuxy}[2]{\cutvar\big|_{[#1,#2)}}
-\def\nuab{\cutvar\big|_{[a,b)}}
+\newcommand{\nuxy}[2]{\seplistvar\big|_{\subset[#1,#2)}}
+\newcommand{\nuxycap}[2]{\seplistvar\big|_{\cap[#1,#2)}}
+
+\def\nuab{\nuxy{a}{b}}
+\def\nuabcap{\nuxycap{a}{b}}
 
 
-For each integer $i$ the set of all integers $j$ such that $(i,j),(i+1,j)\in\lm$ is just an interval $[\mu_{i}+1,\lambda_{i+1}]$ which we call \textit{the support of $i$} and denote $\supp(i):=[\mu_{i}+1,\lambda_{i+1}]$. For two integers $a< b$, by $\nuab$ we denote the subpartition $(i_r,i_{r+1},\dots,i_{r+q})$ of $\cutvar$ such that for $r\leq k\leq r+q$ we have $\supp(i_k)\subset [a,b)$. In this case, we put $\#\nuab:=q+1$ which is just the number of entries in $\nuab$. For example, for $\cutvar=(4,3,3,2)$ and $\lm$ as on Figure \ref{fig:cut}, we have $\supp(3)=[3,4]$, $\supp(2)=[4,7]$, $\supp(4)=[1,4]$, $\nuxy{2}{7}=(3,3)$, $\nuxy{2}{8}=(3,3,2)$, $\nuxy{4}{8}=(2)$ and $\#\nuxy{2}{7}=2$. 
 
-We introduce several definitions: a partition $\cutvar=(i_1\geq \dots\geq i_s>0)$ is called
+For each integer $i$ the set of all integers $j$ such that $(i,j),(i+1,j)\in\lm$ is just an interval $[\mu_{i}+1,\lambda_{i+1}]$ which we call \textit{the support of $i$} and denote $\supp(i):=[\mu_{i}+1,\lambda_{i+1}]$. For two integers $a< b$, by $\nuab$ we denote the subpartition $(i_r,i_{r+1},\dots,i_{r+q})$ of $\seplistvar$ such that for $r\leq k\leq r+q$ we have $\supp(i_k)\subset [a,b)$. In this case, we put $\#\nuab:=q+1$ which is just the number of entries in $\nuab$. Similarly, we put $\nuabcap$ to be the subpartition $(i_r,i_{r+1},\dots,i_{r+q})$ of $\seplistvar$ such that for $r\leq k\leq r+q$ we have $\supp(i_k)\cap [a,b)\neq\emptyset$.
+For example, for $\seplistvar=(4,3,3,2)$ and $\lm$ as on Figure \ref{fig:seplist}, we have 
+$$\supp(3)=[3,4],\ \supp(2)=[4,7],\ \supp(4)=[1,4],$$ 
+$$\nuxy{2}{7}=(3,3),\ \nuxy{2}{8}=(3,3,2),\ \nuxy{4}{8}=(2),\ \nuxycap{4}{5}=(4,3,3,2),\ \#\nuxy{2}{7}=2.$$
+
+We introduce several definitions: a partition $\seplistvar=(i_1\geq \dots\geq i_s>0)$ is called
 
 \begin{tabular}{@{$\bullet$ }lll}
  \textit{non-representable} & if for some $a<b$ we have & $\#\nuab>b-a$;\\
  \textit{representable}& if for all $a<b$ we have& $\#\nuab\leq b-a$;\\
+\end{tabular}
+
+a representable partition is called
+
+\begin{tabular}{@{$\bullet$ }lll} 
  \textit{irreducible}& if for all  $a<b$ we have &$\#\nuab < b-a$;\\
  \textit{reducible} &if for some $a<b$ we have &$\#\nuab=b-a$.
 \end{tabular}
 
-For example, $\cutvar=(4,3,3,2)$ is representable but reducible because we have $\nuxy{3}{5}=(3,3)$ so $\#\nuxy{3}{5}=2=5-3$.
+For example, $\seplistvar=(4,3,3,2)$ is representable but reducible because we have $\nuxy{3}{5}=(3,3)$ so $\#\nuxy{3}{5}=2=5-3$.
 
-Note that these notions depend on the skew partition; thus, when we want to use a skew partition $\widetilde\lm$ rather than $\lm$, we will write that $\cutvar$ is non-representable/irreducible/etc \textit{with respect to $\widetilde\lm$}, and we denote the corresponding partitions by $\nuab^{\widetilde{\lm}}$.
+Note that these notions depend on the skew partition; thus, when we want to use a skew partition $\widetilde\lm$ rather than $\lm$, we will write that $\seplistvar$ is non-representable/irreducible/etc \textit{with respect to $\widetilde\lm$}, and we denote the corresponding partitions by $\nuab^{\widetilde{\lm}}$.
 
-These definitions can be motivated as follows. Suppose that a partition $\cutvar$ is non-representable, so there exist integers $a<b$ such that $\#\nuab>b-a$. Recall that $\nuab=:(i_r,i_{r+1},\dots,i_{r+q})$ contains all entries of $\cutvar$ whose support is a subset of $[a,b)$. Thus in order for condition (\ref{cond:necessary}) to be true there must exist some integers $j_r<j_{r+1}<\dots<j_{r+q}$ such that 
+These definitions can be motivated as follows. Suppose that a partition $\seplistvar$ is non-representable, so there exist integers $a<b$ such that $\#\nuab>b-a$. Recall that $\nuab=:(i_r,i_{r+1},\dots,i_{r+q})$ contains all entries of $\seplistvar$ whose support is a subset of $[a,b)$. Thus in order for condition (\ref{cond:necessary}) to be true there must exist some integers $j_r<j_{r+1}<\dots<j_{r+q}$ such that 
 $$(i_r, j_r),\dots,(i_{r+q},j_{r+q})\in\lm.$$
-From the other hand, by the defintion of the support, we must have $j_k\in \supp(i_k)\subset [a,b)$ for all $r\leq k\leq r+q$. Therefore we get $q+1$ distinct elements of $[a,b)$ which is impossible if $q+1=\#\nuab>b-a$. It means that a non-representable partition $\cutvar$ is never a cut-partition of a 12-rpp $T$. 
+On the other hand, by the definition of the support, we must have $j_k\in \supp(i_k)\subset [a,b)$ for all $r\leq k\leq r+q$. Therefore we get $q+1$ distinct elements of $[a,b)$ which is impossible if $q+1=\#\nuab>b-a$. It means that a non-representable partition $\seplistvar$ is never a seplist-partition of a 12-rpp $T$. 
 
-Suppose now that a partition $\cutvar$ is reducible, so for some $a<b$ we get an equality $\#\nuab=b-a$. Then these integers $j_r<\dots<j_{r+q}$ should still all belong to $[a,b)$ and there are exactly $b-a$ of them, hence 
+Suppose now that a partition $\seplistvar$ is reducible, so for some $a<b$ we get an equality $\#\nuab=b-a$. Then these integers $j_r<\dots<j_{r+q}$ should still all belong to $[a,b)$ and there are exactly $b-a$ of them, hence 
 $$j_r=a,j_{r+1}=a+1,\dots,j_{r+q}=a+q=b-1.$$
-Because $\supp(i_r)\subset[a,b)$, we have $(i_r,a-1)\notin\lm$ so placing a one into $(i_r,a)$ and twos into $(i_r+1,a),(i_r+2,a),\dots$ does not put any restictions on entries in columns $1,\dots, a-1$. And the same is true for columns $b,b+1,\dots$. Thus, if a partition $\cutvar$ is reducible then the filling of columns $a,a+1,\dots, b-1$ is uniquely determined and the filling of the rest can be arbitrary -- the problem of existence of and 12-rpp $T$ such that $\cut(T)=\cutvar$ reduces to two smaller independent problems of the same kind. One can continue this reduction process and end up with several independent irreducible components separated from each other by mixed columns. An illustration of this phenomenon can be seen on Figure \ref{fig:cut}: the columns $3$ and $4$ must be mixed for any 12-rpps $T$ with $\cut(T)=(4,3,3,2)$. We summarize our observations in the follwing lemma:
+Because $\supp(i_r)\subset[a,b)$, we have $(i_r,a-1)\notin\lm$ so placing a one into $(i_r,a)$ and twos into $(i_r+1,a),(i_r+2,a),\dots$ does not put any restictions on entries in columns $1,\dots, a-1$. And the same is true for columns $b,b+1,\dots$. Thus, if a partition $\seplistvar$ is reducible then the filling of columns $a,a+1,\dots, b-1$ is uniquely determined and the filling of the rest can be arbitrary -- the problem of existence of and 12-rpp $T$ such that $\seplist(T)=\seplistvar$ reduces to two smaller independent problems of the same kind. One can continue this reduction process and end up with several independent irreducible components separated from each other by mixed columns. An illustration of this phenomenon can be seen on Figure \ref{fig:seplist}: the columns $3$ and $4$ must be mixed for any 12-rpps $T$ with $\seplist(T)=(4,3,3,2)$. We summarize our observations in the follwing lemma:
 \begin{lemma}
 \label{lemma:irreducible}
- For a partition $\cutvar$, there exist unique numbers $(1=b_0\leq a_1<b_1<a_2<b_2<\dots<a_r<b_r\leq a_{r+1}=W(\lm)+1)$ such that 
- \begin{itemize}
+ For a representable partition $\seplistvar$, there exist unique numbers $(1=b_0\leq a_1<b_1<a_2<b_2<\dots<a_r<b_r\leq a_{r+1}=\lambda_1+1)$ such that 
+ \begin{enumerate}
   \item for all $1\leq k\leq r$, $\#\nuxy{a_k}{b_k} =b_k-a_k$;
-  \item for all $0\leq k \leq r$, $\nuxy{b_k}{a_{k+1}}$ is irreducible with respect to $\lm\big|_{[b_k,a_{k+1})}$,
- \end{itemize}
- where $\lm\big|_{[b_k,a_{k+1})}$ is the skew partition $\lm$ with columns $1,2,\dots,b_k-1,a_{k+1},a_{k+2},\dots$ removed.
+  \item The set $\cup_{k=0}^{r}[b_k,a_k+1)$ is maximal by inclusion among all sequences $(1=b_0\leq a_1<b_1<a_2<b_2<\dots<a_r<b_r\leq a_{r+1}=\lambda_1+1)$ satisfying property 1.
+ \end{enumerate}
+ In this case, the partitions $\nuxycap{b_k}{a_{k+1}}$ are irreducible with respect to $\lm\big|_{[b_k,a_{k+1})}$,
+ which is the skew partition $\lm$ with columns $1,2,\dots,b_k-1,a_{k+1},a_{k+2},\dots$ removed.
 \end{lemma}\qed
 \begin{definition}
- In the context of Lemma \ref{lemma:irreducible}, for $0\leq k\leq r$ the subpartitions $\nuxy{b_k}{a_{k+1}}$ are called \textit{the irreducible components of $\cutvar$} and the numbers $n_k:=a_{k+1}-b_k-\#\nuxy{b_k}{a_{k+1}}$ are called their \textit{degrees}  (for $T$ with $\cut(T)=\cutvar$, the $k$-th degree $n_k$ is equal to the number of pure columns of $T$ inside the corresponding $k$-th irreducible component).
+ 
+ In the context of Lemma \ref{lemma:irreducible}, for $0\leq k\leq r$ the subpartitions $\nuxycap{b_k}{a_{k+1}}$ are called \textit{the irreducible components of $\seplistvar$} and the numbers $n_k:=a_{k+1}-b_k-\#\nuxycap{b_k}{a_{k+1}}$ are called their \textit{degrees}  (for $T$ with $\seplist(T)=\seplistvar$, the $k$-th degree $n_k$ is equal to the number of pure columns of $T$ inside the corresponding $k$-th irreducible component).
 \end{definition}
 \begin{remark}
- Note that the conditions on $b_0,a_1,\dots,a_{r+1}$ guarantee that $\cutvar$ is just a concatenation of partitions $\nuxy{b_0}{a_1},\nuxy{a_1}{b_1},\dots,\nuxy{b_r}{a_{r+1}}$. 
+ Note that the conditions on $b_0,a_1,\dots,a_{r+1}$ guarantee that $\seplistvar$ is just a concatenation of partitions $\nuxycap{b_0}{a_1},\nuxy{a_1}{b_1},\dots,\nuxycap{b_r}{a_{r+1}}$. 
 \end{remark}
 
 \begin{example}
- For $\cutvar=(4,3,3,2)$ we have $r=1,b_0=1,a_1=3,b_1=5,a_2=8$. The irreducible components of $\cutvar$ are $(4)$ and $(2)$ and their degrees are $3-1-1=1$ and $8-5-1=2$ respectively. We have $\nuxy{1}{3}=(4),\nuxy{3}{5}=(3,3),\nuxy{5}{8}=(2)$.
+ For $\seplistvar=(4,3,3,2)$ we have $r=1,b_0=1,a_1=3,b_1=5,a_2=8$. The irreducible components of $\seplistvar$ are $(4)$ and $(2)$ and their degrees are $3-1-1=1$ and $8-5-1=2$ respectively. We have $\nuxycap{1}{3}=(4),\nuxy{3}{5}=(3,3),\nuxycap{5}{8}=(2)$.
 \end{example}
 
 
 \subsection{The structural theorem and its applications}
-It is easy to see that for a 12-rpp $T$, the number $\#\cut(T)$ is equal to the number of mixed columns in $T$.
+It is easy to see that for a 12-rpp $T$, the number $\#\seplist(T)$ is equal to the number of mixed columns in $T$.
 
-Let $\OneTwoRPP$ denote the set of all 12-rpps $T$ of shape $\lm$, and let $\OneTwoRPPCutvar$ denote its subset that contains only 12-rpps $T$ with $\cut(T)=\cutvar$. Now we are ready to state a theorem that completely describes the structure of irreducible components:
+Let $\OneTwoRPP$ denote the set of all 12-rpps $T$ of shape $\lm$, and let $\OneTwoRPPCutvar$ denote its subset that contains only 12-rpps $T$ with $\seplist(T)=\seplistvar$. Now we are ready to state a theorem that completely describes the structure of irreducible components:
 \begin{theorem}
 \label{thm:12rpps}
- Let $\cutvar$ be an irreducible partition. Then for all $0\leq m\leq W(\lm)-\#\cutvar$ there is exactly one 12-rpp $T\in\OneTwoRPPCutvar$ with $\#\cutvar$ mixed columns, $m$ $1$-pure columns and $(W(\lm)-\#\cutvar-m)$ $2$-pure columns. Moreover, these are the only elements of $\OneTwoRPPCutvar$. In other words, for an irreducible partition $\cutvar$ we have
+ Let $\seplistvar$ be an irreducible partition. Then for all $0\leq m\leq \lambda_1-\#\seplistvar$ there is exactly one 12-rpp $T\in\OneTwoRPPCutvar$ with $\#\seplistvar$ mixed columns, $m$ $1$-pure columns and $(\lambda_1-\#\seplistvar-m)$ $2$-pure columns. Moreover, these are the only elements of $\OneTwoRPPCutvar$. In other words, for an irreducible partition $\seplistvar$ we have
   \begin{equation}
  \label{eq:thm12rpps}
- \sum_{T\in\OneTwoRPPCutvar} x^{\ircont(T)}=(x_1x_2)^{\#\cutvar} P_{W(\lm)-\#\cutvar}(x_1,x_2).
+ \sum_{T\in\OneTwoRPPCutvar} x^{\ircont(T)}=(x_1x_2)^{\#\seplistvar} P_{\lambda_1-\#\seplistvar}(x_1,x_2).
  \end{equation}
 \end{theorem}
 
 \begin{example}
- Each of the two 12-rpps on Figure \ref{fig:cut} has two irreducible components. One of them is supported on the first two columns and the other one is supported on the last three columns. Here are all possible 12-rpps for each component:
+ Each of the two 12-rpps on Figure \ref{fig:seplist} has two irreducible components. One of them is supported on the first two columns and the other one is supported on the last three columns. Here are all possible 12-rpps for each component:
  
 %\begin{figure}
 \begin{tabular}{c|c}
@@ -10024,24 +10039,24 @@ Let $\OneTwoRPP$ denote the set of all 12-rpps $T$ of shape $\lm$, and let $\One
 2 & 2 & 2
 \end{ytableau} \\
 \end{tabular}\\
-$\lambda=(2,2);\ \mu=();\ \cutvar=(1)$ & $\lambda=(3,3,3);\ \mu=(1);\ \cutvar=(2)$. 
+$\lambda=(2,2);\ \mu=();\ \seplistvar=(1)$ & $\lambda=(3,3,3);\ \mu=(1);\ \seplistvar=(2)$. 
 \end{tabular}\\
 %\caption{\label{fig:irr} Irreducible components and all possible 12-rpps for them}
 %\end{figure}
 \end{example}
 
 
-After decomposing into irreducible components, we can obtain a formula for general reducible partitions:
+After decomposing into irreducible components, we can obtain a formula for general representable partitions:
 \begin{corollary}
- Let $\cutvar$ be a representable partition. Then
+ Let $\seplistvar$ be a representable partition. Then
   \begin{equation}
   \label{eq:thm12rppsComposite}
 \sum_{T\in\OneTwoRPPCutvar} x^{\ircont(T)}=(x_1x_2)^{M} P_{n_0}(x_1,x_2)P_{n_1}(x_1,x_2)\dots P_{n_r}(x_1,x_2),
   \end{equation}
- where the numbers $M,r,n_0,\dots,n_r$ are defined above: $M=\#\cutvar$, $r+1$ is the number of irreducible components of $\cutvar$ and $n_0,n_1,\dots,n_r$ are their degrees.
+ where the numbers $M,r,n_0,\dots,n_r$ are defined above: $M=\#\seplistvar$, $r+1$ is the number of irreducible components of $\seplistvar$ and $n_0,n_1,\dots,n_r$ are their degrees.
 \end{corollary}
 
- For a 12-rpp $T$, the vectors $\cut(T)$ and $\ceq(T)$ uniquely determine each other: if $(\ceq(T))_i=h$ then $\cut(T)$ contains exactly $\lambda_{i+1}-\mu_i-h$ entries equal to $i$, and this correspondence is one-to-one. Therefore, the polynomials on both sides of (\ref{eq:thm12rppsComposite}) are equal to $Q_{\ceqvar}(x_1,x_2)$ where the vector $\ceqvar$ is the one that corresponds to $\cutvar$.
+ For a 12-rpp $T$, the vectors $\seplist(T)$ and $\ceq(T)$ uniquely determine each other: if $(\ceq(T))_i=h$ then $\seplist(T)$ contains exactly $\lambda_{i+1}-\mu_i-h$ entries equal to $i$, and this correspondence is one-to-one. Therefore, the polynomials on both sides of (\ref{eq:thm12rppsComposite}) are equal to $Q_{\ceqvar}(x_1,x_2)$ where the vector $\ceqvar$ is the one that corresponds to $\seplistvar$.
 
  Note that the polynomials $P_n(x_1,x_2)$ are symmetric for all $n$. Since the question about the symmetry of $\g_\lm$ can be reduced to the two-variable case, Theorem \ref{thm:12rpps} gives an alternative proof of the symmetry of $\g_\lm$:
 \begin{corollary}
@@ -10053,44 +10068,44 @@ Another application of Theorem \ref{thm:12rpps} is a complete description of Ben
 
 \begin{corollary}
 \label{cor:uniqueBK}
-Let $\cutvar$ be an irreducible partition. Then there is a unique map $b:\OneTwoRPPCutvar\to\OneTwoRPPCutvar$ such that for all $T\in\OneTwoRPPCutvar$ we have 
+Let $\seplistvar$ be an irreducible partition. Then there is a unique map $b:\OneTwoRPPCutvar\to\OneTwoRPPCutvar$ such that for all $T\in\OneTwoRPPCutvar$ we have 
 $$\ircont(T)=(c_1,c_2,0,0,\dots)\Longrightarrow \ircont(b(T))=(c_2,c_1,0,0,\dots).$$
-In this case, such a map is an involution on $\OneTwoRPPCutvar$. So, for irreducible partition $\cutvar$ the corresponding Bender-Knuth involution exists and is unique.
+In this case, such a map is an involution on $\OneTwoRPPCutvar$. So, for irreducible partition $\seplistvar$ the corresponding Bender-Knuth involution exists and is unique.
 \end{corollary}
 
 Take any 12-rpp $T\in\OneTwoRPPCutvar$ and recall that a 12-table $\flip(T)$ is obtained from $T$ by simultaneously replacing all entries in $1$-pure columns by $2$ and all entries in $2$-pure columns by $1$. 
 
 \begin{corollary}
 \label{cor:confluence}
- If $\cutvar$ is an irreducible partition, then no matter in which order one resolves conflicts in $\flip(T)$, the resulting tableau $T'$ will be the same. The map $T\to T'$ is the unique Bender-Knuth involution on $\OneTwoRPPCutvar$.
+ If $\seplistvar$ is an irreducible partition, then no matter in which order one resolves conflicts in $\flip(T)$, the resulting tableau $T'$ will be the same. The map $T\to T'$ is the unique Bender-Knuth involution on $\OneTwoRPPCutvar$.
 \end{corollary}
 \begin{proof}[Proof of Corollary \ref{cor:confluence}]
  By Proposition \ref{prop.finality}, conflict-resolving steps applied in any order give an element of $\OneTwoRPPCutvar$. So we get a map $\OneTwoRPPCutvar\to \OneTwoRPPCutvar$ that satisfies the assumptions of Corollary \ref{cor:uniqueBK}.
 \end{proof}
 
 
-Finally, notice that for a general representable partition $\cutvar$ conflicts may only occur inside each irreducible component independently, so we conclude the chain of corollaries by stating that our constructed involutions are canonical in the following sense:
+Finally, notice that for a general representable partition $\seplistvar$ conflicts may only occur inside each irreducible component independently, so we conclude the chain of corollaries by stating that our constructed involutions are canonical in the following sense:
 
 \begin{corollary}
  For a representable partition, the map $\mathbf{B}:\OneTwoRPPCutvar\to\OneTwoRPPCutvar$ is the unique involution that interchanges the number of $1$-pure columns with the number of $2$-pure columns inside each irreducible component.
 \end{corollary}
 
 \subsection{The proof}
-Recall that $\cutvar=(i_1,\dots,i_s)$ is an irreducible partition. We start with the following simple observation:
+Recall that $\seplistvar=(i_1,\dots,i_s)$ is an irreducible partition. We start with the following simple observation:
 \begin{lemma}
 \label{lemma:leftRight}
  Let $T\in\OneTwoRPPCutvar$. Then any $1$-pure column of $T$ is to the left of any $2$-pure column of $T$.
 \end{lemma}
 \begin{proof}[Proof of Lemma \ref{lemma:leftRight}]
 Suppose it is false and we have a $1$-pure column to the right of a $2$-pure column. Consider the closest pair of columns $a$ and $b$ such that $a$ is $2$-pure and $b$ is $1$-pure, then the columns $a+1,\dots,b-1$ must all be mixed. %, otherwise if some column $k\in (a,b)$ is $1$-pure (resp., $2$-pure) then the columns $a$ and $k$ (resp., $k$ and $b$) would be closer to each other than $a$ and $b$.
-Therefore the set $\NS(T)$ contains $\{(i_1,a+1),(i_2,a+2),\dots,(i_{b-1-a},b-1)\}$. And because $a$ is $2$-pure and $b$ is $1$-pure, the support of any $i_k$ for $k=1\dots b-1-a$ is a subset of $[a+1,b)$ which contradicts the irreducibility of $\cutvar$.
+Therefore the set $\NS(T)$ contains $\{(i_1,a+1),(i_2,a+2),\dots,(i_{b-1-a},b-1)\}$. And because $a$ is $2$-pure and $b$ is $1$-pure, the support of any $i_k$ for $k=1\dots b-1-a$ is a subset of $[a+1,b)$ which contradicts the irreducibility of $\seplistvar$.
 \end{proof}
 
 
 \begin{proof}[Proof of Theorem \ref{thm:12rpps}]
-We proceed by induction on the number of columns in $\lm$. If the number of columns is one then the statement of Theorem \ref{thm:12rpps} is obvious. Suppose that we have proven that for all skew partitions $\widetilde{\lm}$ with less than $W(\lm)$ columns and for all partitions $\widetilde\cutvar$  irreducible with respect to $\widetilde{\lm}$ and for all $0\leq \widetilde m\leq W(\widetilde{\lm})-\#\widetilde\cutvar$, there is exactly one 12-rpp $\widetilde T$ of shape $\widetilde{\lm}$ with exactly $\widetilde m$ $1$-pure columns, exactly $\#\widetilde\cutvar$ mixed columns and exactly $(W(\widetilde{\lm})-\#\widetilde\cutvar-\widetilde m)$ $2$-pure columns. Now we want to prove the same for $\lm$.
+We proceed by induction on the number of columns in $\lm$. If the number of columns is one then the statement of Theorem \ref{thm:12rpps} is obvious. Suppose that we have proven that for all skew partitions $\widetilde{\lm}$ with less than $\lambda_1$ columns and for all partitions $\widetilde\seplistvar$  irreducible with respect to $\widetilde{\lm}$ and for all $0\leq \widetilde m\leq \widetilde{\lambda}_1)-\#\widetilde\seplistvar$, there is exactly one 12-rpp $\widetilde T$ of shape $\widetilde{\lm}$ with exactly $\widetilde m$ $1$-pure columns, exactly $\#\widetilde\seplistvar$ mixed columns and exactly $(\widetilde{\lambda}_1-\#\widetilde\seplistvar-\widetilde m)$ $2$-pure columns. Now we want to prove the same for $\lm$.
 
-Take any 12-rpp $T\in\OneTwoRPPCutvar$ with $\cut(T)=\cutvar$ and with $m$ $1$-pure columns for $0\leq m\leq W(\lm)-\#\cutvar$. Suppose first that $m>0$. Then there is at least one $1$-pure column in $T$. Let $q+1$ be the leftmost such column for some $q\geq 0$. Then by Lemma \ref{lemma:leftRight} the columns $1,2,\dots,q$ are mixed. If $q>0$ then the supports of $i_1,i_2,\dots,i_q$ are all contained inside $[1,q+1)$ and we get a contradiction with the irreducibility of $\cutvar$. The only remaining case is that $q=0$ and the first column of $T$ is $1$-pure. Let $\widetilde\lm$ denote $\lm$ with the first column removed. Then $\cutvar$ may not be irreducible with respect to $\widetilde{\lm}$, because it may happen that $\#\nuxy{1}{b}^{\widetilde{\lm}}=b-1$ for some $b$. In this case we can ignore these first $b-1$ mixed columns and apply the induction hypothesis. We are done with the case $m>0$. If $m<W(\lm)-\#\cutvar$ then we can apply a mirrored argument to the last column, and it remains to note that for $W(\lm)-\#\cutvar>0$ the cases $m>0$ and $m<W(\lm)-\#\cutvar$ cover everything and for $W(\lm)=\#\cutvar$ we get that $T$ is a 12-rpp with all mixed columns, but there is obviously a unique such 12-rpp.
+Take any 12-rpp $T\in\OneTwoRPPCutvar$ with $\seplist(T)=\seplistvar$ and with $m$ $1$-pure columns for $0\leq m\leq \lambda_1-\#\seplistvar$. Suppose first that $m>0$. Then there is at least one $1$-pure column in $T$. Let $q+1$ be the leftmost such column for some $q\geq 0$. Then by Lemma \ref{lemma:leftRight} the columns $1,2,\dots,q$ are mixed. If $q>0$ then the supports of $i_1,i_2,\dots,i_q$ are all contained inside $[1,q+1)$ and we get a contradiction with the irreducibility of $\seplistvar$. The only remaining case is that $q=0$ and the first column of $T$ is $1$-pure. Let $\widetilde\lm$ denote $\lm$ with the first column removed. Then $\seplistvar$ may not be irreducible with respect to $\widetilde{\lm}$, because it may happen that $\#\nuxy{1}{b}^{\widetilde{\lm}}=b-1$ for some $b$. In this case we can ignore these first $b-1$ mixed columns and apply the induction hypothesis. We are done with the case $m>0$. If $m<\lambda_1-\#\seplistvar$ then we can apply a mirrored argument to the last column, and it remains to note that for $\lambda_1-\#\seplistvar>0$ the cases $m>0$ and $m<\lambda_1-\#\seplistvar$ cover everything and for $\lambda_1=\#\seplistvar$ we get that $T$ is a 12-rpp with all mixed columns, but there is obviously a unique such 12-rpp.
 \end{proof}
 
 
